--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "assgn",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.jpg",
+    "icon": "./assets/icon4.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/icon2.png",
@@ -19,13 +19,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/icon.jpg",
+        "foregroundImage": "./assets/icon4.png",
         "backgroundColor": "#ffffff"
       },
       "package": "com.kushagra208.assgn"
     },
     "web": {
-      "favicon": "./assets/icon.jpg"
+      "favicon": "./assets/icon4.png"
     },
     "extra": {
       "eas": {
