--- a/eas.json
+++ b/eas.json
@@ -1,7 +1,8 @@
 {
     "build": {
-      "preview": {
-        "android": {
+        "preview": {
+            "node":"20.10.0",
+            "android": {
           "buildType": "apk"
         }
       },
